# Text-Classification-System

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  app.py  confi.yaml  confi2.yaml  confi3.yaml  config new.yaml  config.example.yaml  config.py  config.yaml  extract_names.py  main.py  nltk_download.py  performance_test_script.py  pyproject.toml  requirements.txt  save results.do  setup.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
classifai/: __init__.py  device.py  evaluator.py  loader.py  pipeline.py  progress.py  reporter.py  saver.py
classifai/backends/: __init__.py  base.py  llm.py
data/: generate_sample.py  support_tickets_sample.csv
docs/: Documentation.md  architecture.md  backends.md  configuration.md  usage.md
modules/: __init__.py  ai_classifier.py  classifier.py  data_processor.py  evaluation.py  unique_row_processor.py  utilities.py
notebooks/: quickstart.ipynb
test/: README_TESTS.md  conftest.py  pytest.ini  requirements_test.txt  run_all_tests.py  setup_test_env.py  test_ai_classifier.py  test_clustering.py  test_config.py  test_data_generator.py  test_data_processor.py  test_evaluation.py  test_pipeline.py  test_utilities.py  test_visualizations.py
test/configs/: test_config_ai.yaml
tools/: app-local.py  app.py  requirements.txt
